feat(serv): Добавить кнопки при создании задачи (Фаза C, D)